--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,13 @@ markdown: kramdown
 highlighter: rouge
 
 # Pagination
-paginate: 15
-paginate_path: "/blog/page:num/"
+# paginate: 15
+# paginate_path: "/blog/page:num/"
 
+
+
+# Plugins
+# plugins: [jekyll-paginate]
 
 collections:
   portfolio:
